// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ProjectCard correctly 1`] = `
<div
  className="sc-project-card-container"
  style={
    Object {
      "order": 1,
    }
  }
>
  <a
    className="sc-project-card"
    href="/dashboard?id=sonarsource-jfrog.simple-js-php-project"
  >
    <div
      className="sc-project-card-header"
    >
      <OrganizationAvatar
        className="no-border spacer-bottom"
        organization={
          Object {
            "avatar": undefined,
            "name": "SonarSource & JFrog",
          }
        }
      />
      <p
        className="sc-project-card-limited"
        title="SonarSource & JFrog"
      >
        SonarSource & JFrog
      </p>
      <h5
        className="sc-project-card-limited big-spacer-bottom"
        title="Simple JS & PHP project"
      >
        Simple JS & PHP project
      </h5>
    </div>
    <ul
      className="sc-project-card-measures"
    >
      <ProjectIssues
        metric={0}
        metricKey="bugs"
        ratingMetric={1}
        viewable={true}
      />
      <ProjectIssues
        metric={0}
        metricKey="vulnerabilities"
        ratingMetric={1}
        viewable={true}
      />
      <ProjectIssues
        metric={7}
        metricKey="code_smells"
        ratingMetric={1}
        viewable={true}
      />
      <li>
        <span>
          overview.metric.coverage
        </span>
        <div>
          <CountUp
            decimal="."
            decimals={1}
            delay={0}
            duration={4}
            end={9.7}
            suffix="%"
          >
            <Component />
          </CountUp>
          <CoverageRating
            value={9.7}
          />
        </div>
      </li>
      <li>
        <span>
          overview.metric.duplications
        </span>
        <div>
          <CountUp
            decimal="."
            decimals={1}
            delay={0}
            duration={4}
            end={56.2}
            suffix="%"
          >
            <Component />
          </CountUp>
          <DuplicationsRating
            value={56.2}
          />
        </div>
      </li>
    </ul>
    <div
      className="sc-mention text-left big-spacer-top"
    >
      324
       lines of code /
       
      <Connect(ProjectCardLanguages)
        className="display-inline-block"
        distribution="js;php"
      />
    </div>
  </a>
</div>
`;

exports[`should render ProjectCard correctly when there is no coverage 1`] = `
<li>
  <span>
    overview.metric.coverage
  </span>
  <span
    className="huge little-spacer-right"
  >
    —
  </span>
</li>
`;

exports[`should render ProjectIssues correctly 1`] = `
<li>
  <span>
    overview.metric.foo
  </span>
  <div>
    <CountUp
      delay={0}
      duration={4}
      end={5}
      suffix=""
    >
      <Component />
    </CountUp>
    <Rating
      value={20}
    />
  </div>
</li>
`;

exports[`should render ProjectIssues correctly 2`] = `
<li>
  <span>
    overview.metric.foo
  </span>
  <div>
    <CountUp
      delay={0}
      duration={4}
      end={15}
      suffix="short_number_suffix.k"
    >
      <Component />
    </CountUp>
    <Rating
      value={20}
    />
  </div>
</li>
`;

exports[`should render correctly 1`] = `
<div
  className="sc-featured-projects sc-big-spacer-bottom"
>
  <button
    className="js-prev sc-project-button"
    onClick={[Function]}
    type="button"
  >
    <img
      alt=""
      src="/images/sonarcloud/chevron-left.svg"
    />
  </button>
  <div
    className="sc-featured-projects-container"
  >
    <div
      className="sc-featured-projects-inner ready"
    >
      <ProjectCard
        key="example-js-4"
        order={0}
        project={
          Object {
            "avatarUrl": null,
            "bugs": 13,
            "codeSmells": 5,
            "coverage": 0,
            "duplications": 0,
            "gateStatus": "OK",
            "key": "example-js-4",
            "languages": Array [
              "go",
              "js",
              "php",
              "py",
            ],
            "maintainabilityRating": 1,
            "name": "example-js",
            "ncloc": 80,
            "organizationKey": "autoscan",
            "organizationName": "AutoScan",
            "reliabilityRating": 1,
            "securityRating": 1,
            "vulnerabilities": 0,
          }
        }
        viewable={false}
      />
      <ProjectCard
        key="sonarsource-jfrog.simple-js-php-project"
        order={1}
        project={
          Object {
            "avatarUrl": null,
            "bugs": 0,
            "codeSmells": 7,
            "coverage": 9.7,
            "duplications": 56.2,
            "gateStatus": "OK",
            "key": "sonarsource-jfrog.simple-js-php-project",
            "languages": Array [
              "js",
              "php",
            ],
            "maintainabilityRating": 1,
            "name": "Simple JS & PHP project",
            "ncloc": 324,
            "organizationKey": "sonarsource-jfrog",
            "organizationName": "SonarSource & JFrog",
            "reliabilityRating": 1,
            "securityRating": 1,
            "vulnerabilities": 0,
          }
        }
        viewable={false}
      />
      <ProjectCard
        key="example-js"
        order={2}
        project={
          Object {
            "avatarUrl": null,
            "bugs": 13,
            "codeSmells": 5,
            "coverage": 0,
            "duplications": 0,
            "gateStatus": "OK",
            "key": "example-js",
            "languages": Array [
              "go",
              "js",
              "php",
              "py",
            ],
            "maintainabilityRating": 1,
            "name": "example-js",
            "ncloc": 80,
            "organizationKey": "autoscan",
            "organizationName": "AutoScan",
            "reliabilityRating": 1,
            "securityRating": 1,
            "vulnerabilities": 0,
          }
        }
        viewable={false}
      />
      <ProjectCard
        key="example-js-2"
        order={3}
        project={
          Object {
            "avatarUrl": null,
            "bugs": 13,
            "codeSmells": 5,
            "coverage": 0,
            "duplications": 0,
            "gateStatus": "OK",
            "key": "example-js-2",
            "languages": Array [
              "go",
              "js",
              "php",
              "py",
            ],
            "maintainabilityRating": 1,
            "name": "example-js",
            "ncloc": 80,
            "organizationKey": "autoscan",
            "organizationName": "AutoScan",
            "reliabilityRating": 1,
            "securityRating": 1,
            "vulnerabilities": 0,
          }
        }
        viewable={false}
      />
      <ProjectCard
        key="example-js-3"
        order={4}
        project={
          Object {
            "avatarUrl": null,
            "bugs": 13,
            "codeSmells": 5,
            "coverage": 0,
            "duplications": 0,
            "gateStatus": "OK",
            "key": "example-js-3",
            "languages": Array [
              "go",
              "js",
              "php",
              "py",
            ],
            "maintainabilityRating": 1,
            "name": "example-js",
            "ncloc": 80,
            "organizationKey": "autoscan",
            "organizationName": "AutoScan",
            "reliabilityRating": 1,
            "securityRating": 1,
            "vulnerabilities": 0,
          }
        }
        viewable={false}
      />
    </div>
  </div>
  <button
    className="js-next sc-project-button"
    onClick={[Function]}
    type="button"
  >
    <img
      alt=""
      src="/images/sonarcloud/chevron-right.svg"
    />
  </button>
</div>
`;
